--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,34 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-    line-height: 1.6;
+	font-family: Arial, sans-serif;
+	margin: 20px;
+	line-height: 1.6;
+	background-color: white;
 }
 
 h1 {
-    text-align: center;
-    margin-bottom: 20px;
+	text-align: center;
+	margin-bottom: 20px;
 }
 
 p {
-    margin-bottom: 15px;
+	margin-bottom: 15px;
 }
 
 ul {
-    list-style-type: disc;
-    margin-left: 20px;
-    margin-bottom: 20px;
+	list-style-type: disc;
+	margin-left: 20px;
 }
 
 certifications {
-    display: block;
-    margin-bottom: 20px;
+	display: block;
+	margin-bottom: 20px;
 }
 
 a {
-    color: blue;
-    text-decoration: none;
-} 
+	color: blue;
+	text-decoration: none;
+}
 
 a:hover {
-    text-decoration: underline;
+	text-decoration: underline;
 }
