--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 body {
-	font-family: Arial, sans-serif;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	margin: 20px;
 	line-height: 1.6;
-	background-color: white;
+	background-color: whitesmoke;
+	font-size: 1.2em;
 }
 
 h1 {
@@ -19,16 +20,58 @@ ul {
 	margin-left: 20px;
 }
 
-certifications {
+/* certifications {
 	display: block;
 	margin-bottom: 20px;
-}
+} */
 
 a {
-	color: blue;
-	text-decoration: none;
+	color: rgb(2, 66, 66);
 }
 
 a:hover {
 	text-decoration: underline;
+	color:#ffa5a5
 }
+
+/* for timeline */
+/* credit to https://devncoffee.com/responsive-timeline-html-css/ */
+/* (PART A) WRAPPER */
+.hOut { overflow-x: auto; }
+.hIn {
+  display: flex;
+  padding-bottom: 10px; margin-bottom: 20px;
+  border-bottom: 3px dotted #ffa5a5;
+  min-width: fit-content; width: 100%;
+}
+
+/* (PART B) EVENTS */
+.hIn .event {
+  color: #222222; background: #CBC3E3; border: 2px solid #d68d8d;
+  min-width: 200px; max-width: 300px;
+  padding: 10px; margin: 10px; border-radius: 10px;
+  position: relative;
+}
+
+.hIn .eDate { font-family: monospace; font-weight: 500; font-size: 20px; text-align: center;}
+.hIn .eTxt { font-size: 19px; }
+
+/* (PART C) TIMELINE SHARED */
+.hIn .event::before, .hIn .event::after {
+  position: absolute; content: "";
+}
+
+/* (PART D) TIMELINE CIRCLE */
+.hIn .event::before {
+  bottom: -30px; left: 50%;
+  content: ""; width: 16px; height: 16px; border-radius: 50%;
+  background: #ffa5a5;
+}
+
+/* (PART E) TIMELINE "T-CONNECTOR" */
+.hIn .event::after {
+  bottom: -20px; left: calc(50% + 6px);
+  width: 1px; height: 20px;
+  border-left: 3px dotted #ffa5a5;
+}
+
