--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 h1 {
 	text-align: center;
 	margin-bottom: 20px;
-	font-size: 2vw;
+	font-size: 2em;
 }
 
 .top-line {
@@ -119,9 +119,8 @@ a:hover {
 }
 
 .portfolio-section h2 {
-	font-size: 2vw;
+	font-size: 1.4em;
 	padding-top: 2%;
-	font-family: monospace;
 	font-weight: bold;
 }
 
