--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ a:hover {
 	font-family: monospace;
 	font-size: 16px;
 	text-align: center;
+	margin-top: 10%;
 }
 .hIn .eTxt {
 	font-size: 15px;
