--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,13 @@ a:hover {
 	display: flex;
 	flex-direction: column;
 	text-align: center;
-	padding-bottom: 2%;
+	padding-bottom: 10%;
+}
+
+.portfolio-link {
+	text-align: center;
+	font-weight: bold;
+	padding-bottom: 1%;
 }
 
 .portfolio-section h2 {
