--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,28 @@ a:hover {
 	/* height: 800px; */
 }
 
+.gallery {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 20px;
+}
+.book {
+	width: 250px;
+	background: white;
+	padding: 5px;
+	border-radius: 10px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+	transition: transform 0.3s ease-in-out;
+}
+.book:hover {
+	transform: scale(1.05);
+}
+.book img {
+	width: 95%;
+	border-radius: 8px;
+}
+
 @media only screen and (max-width: 1300px) {
 	.portfolio-container {
 		display: flex;
